--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,12 @@
     "@typescript-eslint/camelcase": "off",
     "class-methods-use-this": "off",
     "prettier/prettier": "error",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "_"
+      }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
